--- a/Project.toml
+++ b/Project.toml
@@ -7,4 +7,4 @@ authors = ["gbene <gabri.benedetti@gmail.com>"]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [compat]
-julia = ">= 1.11"
+julia = "1.11"
