--- a/examples/FractalizeExamples/Project.toml
+++ b/examples/FractalizeExamples/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Fractalizer = "c0cd90ba-f482-40dc-b865-bff11b43dfb3"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
