--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -28,7 +28,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    if: "contains(github.event.head_commit.message, [docs])"
+    if: "contains(github.event.head_commit.message, '[docs]')"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
